# sruth

./: Cargo.toml  README.md  Resources.md
.cargo/: config.toml
crates/sruth-derive/: Cargo.toml
crates/sruth-derive/src/: lib.rs
examples/brainfuck/: main.rs  parse.rs  programs.rs
src/: lib.rs
src/builder/: block.rs  context.rs  error.rs  function.rs  mod.rs
src/dataflow/: filter_map.rs  input_manager.rs  mod.rs  program.rs  trace_manager.rs  translate.rs
src/dataflow/algorithms/: mod.rs  reachable.rs
src/dataflow/operators/: apply_seq.rs  bounded_loop.rs  buffered_flat_map.rs  cleanup.rs  collect.rs  count_ext.rs  discriminated_idents.rs  distinct.rs  event_utils.rs  exchange.rs  filter_diff.rs  flatten.rs  inspect.rs  join.rs  keys.rs  map.rs  max.rs  min.rs  mod.rs  partition.rs  reverse.rs  split.rs  threshold.rs  union_find.rs
src/equisat/: mod.rs  sexpr.lalrpop  sexpr.rs
src/optimize/: constant_folding.rs  dead_code.rs  inline.rs  loops.rs  mod.rs  peephole.rs
src/optimize/constant_folding/: evaluation.rs  mod.rs  promotion.rs
src/optimize/inline/: early_inline.rs  heuristics.rs  mod.rs
src/repr/: basic_block.rs  constant.rs  function.rs  mod.rs  terminator.rs  types.rs  utils.rs  value.rs
src/repr/instruction/: assign.rs  binary_ops.rs  bitcast.rs  call.rs  cmp.rs  mod.rs  neg.rs
src/tests/: mod.rs  num_folding.rs
src/verify/: mod.rs
src/vsdg/: cse.rs  dce.rs  dot.rs  folding.rs  graph.rs  inline.rs  logging.rs  loops.rs  mod.rs  node.rs  tests.rs
src/vsdg/node/: control.rs  mod.rs  node_ext.rs  operation.rs  structure.rs
src/vsdg/node/value/: constant.rs  mod.rs  parameter.rs
src/wasm/: mod.rs
