[package]
name = "sruth"
version = "0.1.0"
description = "A toy optimization engine"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["dot"]
dot = ["petgraph"]

[dependencies]
fxhash = "0.2.1"
derive_more = "0.99.11"
petgraph = { version = "0.5.1", optional = true }
abomonation = "0.7.3"
crossbeam-channel = "0.5.0"
abomonation_derive = "0.5.0"

[dependencies.sruth-derive]
path = "crates/sruth-derive"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.lasso]
version = "0.4.1"
features = ["multi-threaded"]

[dependencies.tracing]
version = "0.1.23"
default-features = false

[dependencies.pretty]
version = "0.10.0"
default-features = false

[dependencies.timely]
git = "https://github.com/TimelyDataflow/timely-dataflow"
default-features = false

[dependencies.differential-dataflow]
git = "https://github.com/TimelyDataflow/differential-dataflow"
rev = "2b12f29d951b60c6c1ef3db77fbba1568db5a2c3"
default-features = false

[dependencies.dogsdogsdogs]
git = "https://github.com/TimelyDataflow/differential-dataflow"
rev = "2b12f29d951b60c6c1ef3db77fbba1568db5a2c3"
default-features = false

[dev-dependencies]
tracing-subscriber = "0.2.15"

[profile.dev]
opt-level = 0
incremental = true
debug = 0
