[package]
name = "sruth"
version = "0.1.0"
description = "A toy optimization engine"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"

[features]
default = ["dot"]
dot = ["petgraph"]

[[example]]
name = "brainfuck"

[dependencies]
regex = "1.5.4"
fxhash = "0.2.1"
byteorder = "1.4.3"
abomonation = "0.7.3"
derive_more = "0.99.11"
lalrpop-util = "0.19.5"
crossbeam-channel = "0.5.0"
abomonation_derive = "0.5.0"
petgraph = { version = "0.5.1", optional = true }

[dependencies.sruth-derive]
path = "crates/sruth-derive"

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dependencies.lasso]
version = "0.5.0"
features = ["multi-threaded"]

[dependencies.tracing]
version = "0.1.23"
default-features = false

[dependencies.pretty]
version = "0.10.0"
default-features = false

[dependencies.timely]
git = "https://github.com/TimelyDataflow/timely-dataflow"
default-features = false

[dependencies.differential-dataflow]
git = "https://github.com/TimelyDataflow/differential-dataflow"
default-features = false

[dependencies.dogsdogsdogs]
git = "https://github.com/TimelyDataflow/differential-dataflow"
default-features = false

[build-dependencies]
lalrpop = "0.19.5"

[dev-dependencies]
tracing-subscriber = "0.2.15"

[profile.dev]
opt-level = 0
debug = 2
